gen/MarkovLangParser.py
# Generated from C:/Users/jeffo/Downloads/Teoria de Compiladores/TP1/MarkovLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MarkovLangParser ( Parser ):

    grammarFileName = "MarkovLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'seed'", "'chain'", "<INVALID>", 
                     "'transition'", "'simulate'", "'stationary'", "'if'", 
                     "'then'", "'else'", "'while'", "'do'", "'print'", "'int'", 
                     "'float'", "'bool'", "'string'", "<INVALID>", "'true'", 
                     "'false'", "<INVALID>", "<INVALID>", "<INVALID>", "':='", 
                     "'->'", "':'", "';'", "','", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "VAR", "SEED", "CHAIN", "STATE", "TRANSITION", 
                      "SIMULATE", "STATIONARY", "IF", "THEN", "ELSE", "WHILE", 
                      "DO", "PRINT", "INT_TYPE", "FLOAT_TYPE", "BOOL_TYPE", 
                      "STRING_TYPE", "STATE_TYPE", "TRUE", "FALSE", "RELOP", 
                      "ADDOP", "MULOP", "ASSIGN", "ARROW", "COLON", "SEMI", 
                      "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "FLOAT_LIT", 
                      "INT_LIT", "STRING_LIT", "ID", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_globalConfig = 1
    RULE_seedStmt = 2
    RULE_statement = 3
    RULE_varDecl = 4
    RULE_typeSpec = 5
    RULE_assignment = 6
    RULE_ifStmt = 7
    RULE_whileStmt = 8
    RULE_printStmt = 9
    RULE_block = 10
    RULE_chainDecl = 11
    RULE_chainBody = 12
    RULE_stateDecl = 13
    RULE_transitionStmt = 14
    RULE_simulateStmt = 15
    RULE_stationaryStmt = 16
    RULE_expression = 17
    RULE_relationalExpr = 18
    RULE_additiveExpr = 19
    RULE_multiplicativeExpr = 20
    RULE_factor = 21

    ruleNames =  [ "program", "globalConfig", "seedStmt", "statement", "varDecl", 
                   "typeSpec", "assignment", "ifStmt", "whileStmt", "printStmt", 
                   "block", "chainDecl", "chainBody", "stateDecl", "transitionStmt", 
                   "simulateStmt", "stationaryStmt", "expression", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "factor" ]

    EOF = Token.EOF
    VAR=1
    SEED=2
    CHAIN=3
    STATE=4
    TRANSITION=5
    SIMULATE=6
    STATIONARY=7
    IF=8
    THEN=9
    ELSE=10
    WHILE=11
    DO=12
    PRINT=13
    INT_TYPE=14
    FLOAT_TYPE=15
    BOOL_TYPE=16
    STRING_TYPE=17
    STATE_TYPE=18
    TRUE=19
    FALSE=20
    RELOP=21
    ADDOP=22
    MULOP=23
    ASSIGN=24
    ARROW=25
    COLON=26
    SEMI=27
    COMMA=28
    LPAREN=29
    RPAREN=30
    LBRACE=31
    RBRACE=32
    FLOAT_LIT=33
    INT_LIT=34
    STRING_LIT=35
    ID=36
    WS=37
    LINE_COMMENT=38
    BLOCK_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MarkovLangParser.EOF, 0)

        def globalConfig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkovLangParser.GlobalConfigContext)
            else:
                return self.getTypedRuleContext(MarkovLangParser.GlobalConfigContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkovLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MarkovLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MarkovLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 44
                self.globalConfig()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70866971082) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(MarkovLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seedStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.SeedStmtContext,0)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_globalConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalConfig" ):
                listener.enterGlobalConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalConfig" ):
                listener.exitGlobalConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalConfig" ):
                return visitor.visitGlobalConfig(self)
            else:
                return visitor.visitChildren(self)




    def globalConfig(self):

        localctx = MarkovLangParser.GlobalConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalConfig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.seedStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeedStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEED(self):
            return self.getToken(MarkovLangParser.SEED, 0)

        def INT_LIT(self):
            return self.getToken(MarkovLangParser.INT_LIT, 0)

        def SEMI(self):
            return self.getToken(MarkovLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_seedStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeedStmt" ):
                listener.enterSeedStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeedStmt" ):
                listener.exitSeedStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeedStmt" ):
                return visitor.visitSeedStmt(self)
            else:
                return visitor.visitChildren(self)




    def seedStmt(self):

        localctx = MarkovLangParser.SeedStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_seedStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(MarkovLangParser.SEED)
            self.state = 61
            self.match(MarkovLangParser.INT_LIT)
            self.state = 62
            self.match(MarkovLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MarkovLangParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MarkovLangParser.AssignmentContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.WhileStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.PrintStmtContext,0)


        def chainDecl(self):
            return self.getTypedRuleContext(MarkovLangParser.ChainDeclContext,0)


        def simulateStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.SimulateStmtContext,0)


        def stationaryStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.StationaryStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(MarkovLangParser.BlockContext,0)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MarkovLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.varDecl()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.assignment()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.ifStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.whileStmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.printStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.chainDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.simulateStmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.stationaryStmt()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MarkovLangParser.VAR, 0)

        def ID(self):
            return self.getToken(MarkovLangParser.ID, 0)

        def COLON(self):
            return self.getToken(MarkovLangParser.COLON, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(MarkovLangParser.TypeSpecContext,0)


        def SEMI(self):
            return self.getToken(MarkovLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MarkovLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MarkovLangParser.VAR)
            self.state = 76
            self.match(MarkovLangParser.ID)
            self.state = 77
            self.match(MarkovLangParser.COLON)
            self.state = 78
            self.typeSpec()
            self.state = 79
            self.match(MarkovLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MarkovLangParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MarkovLangParser.FLOAT_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(MarkovLangParser.BOOL_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MarkovLangParser.STRING_TYPE, 0)

        def STATE_TYPE(self):
            return self.getToken(MarkovLangParser.STATE_TYPE, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = MarkovLangParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 507904) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MarkovLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MarkovLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MarkovLangParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MarkovLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MarkovLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(MarkovLangParser.ID)
            self.state = 84
            self.match(MarkovLangParser.ASSIGN)
            self.state = 85
            self.expression()
            self.state = 86
            self.match(MarkovLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MarkovLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(MarkovLangParser.ExpressionContext,0)


        def THEN(self):
            return self.getToken(MarkovLangParser.THEN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkovLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(MarkovLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(MarkovLangParser.ELSE, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = MarkovLangParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(MarkovLangParser.IF)
                self.state = 89
                self.expression()
                self.state = 90
                self.match(MarkovLangParser.THEN)
                self.state = 91
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(MarkovLangParser.IF)
                self.state = 94
                self.expression()
                self.state = 95
                self.match(MarkovLangParser.THEN)
                self.state = 96
                self.block()
                self.state = 97
                self.match(MarkovLangParser.ELSE)
                self.state = 98
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MarkovLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(MarkovLangParser.ExpressionContext,0)


        def DO(self):
            return self.getToken(MarkovLangParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(MarkovLangParser.BlockContext,0)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = MarkovLangParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MarkovLangParser.WHILE)
            self.state = 103
            self.expression()
            self.state = 104
            self.match(MarkovLangParser.DO)
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MarkovLangParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(MarkovLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MarkovLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MarkovLangParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MarkovLangParser.SEMI, 0)

        def getRuleIndex(self):
            return MarkovLangParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = MarkovLangParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MarkovLangParser.PRINT)
            self.state = 108
            self.match(MarkovLangParser.LPAREN)
            self.state = 109
            self.expression()
            self.state = 110
            self.match(MarkovLangParser.RPAREN)
            self.state = 111
            self.match(MarkovLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MarkovLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MarkovLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkovLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MarkovLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MarkovLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MarkovLangParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70866971082) != 0):
                self.state = 114
                self.statement()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(MarkovLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChainDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAIN(self):
            return self.getToken(MarkovLangParser.CHAIN, 0)

        def ID(self):
            return self.getToken(MarkovLangParser.ID, 0)

        def DO(self):
            return self.getToken(MarkovLangParser.DO, 0)

        def LBRACE(self):
            return self.getToken(MarkovLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MarkovLangParser.RBRACE, 0)

        def chainBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkovLangParser.ChainBodyContext)
            else:
                return self.getTypedRuleContext(MarkovLangParser.ChainBodyContext,i)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_chainDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChainDecl" ):
                listener.enterChainDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChainDecl" ):
                listener.exitChainDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChainDecl" ):
                return visitor.visitChainDecl(self)
            else:
                return visitor.visitChildren(self)




    def chainDecl(self):

        localctx = MarkovLangParser.ChainDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_chainDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MarkovLangParser.CHAIN)
            self.state = 123
            self.match(MarkovLangParser.ID)
            self.state = 124
            self.match(MarkovLangParser.DO)
            self.state = 125
            self.match(MarkovLangParser.LBRACE)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==5:
                self.state = 126
                self.chainBody()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(MarkovLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChainBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateDecl(self):
            return self.getTypedRuleContext(MarkovLangParser.StateDeclContext,0)


        def transitionStmt(self):
            return self.getTypedRuleContext(MarkovLangParser.TransitionStmtContext,0)


        def getRuleIndex(self):
            return MarkovLangParser.RULE_chainBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChainBody" ):
                listener.enterChainBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChainBody" ):
                listener.exitChainBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChainBody" ):
                return visitor.visitChainBody(self)
            else:
                return visitor.visitChildren(self)




    def chainBody(self):
